# ream

./: .rustfmt.toml  Cargo.toml  Makefile  grammar.ebnf  grammar.txt  test  type-test
examples/: simple-test  test  type-test
src/: ast.rs  bytecode.rs  error.rs  lex.rs  lib.rs  main.rs  parse.rs  token.rs  vm.rs
src/eval/: apply.rs  implementations.rs  impls.rs  mod.rs  primitives.rs  value.rs
src/lex/: mod.rs  token.rs
src/parse/: annotation.rs  mod.rs  quote.rs
src/parse/expression/: assign.rs  call.rs  define.rs  if_.rs  lambda.rs  literal.rs  mod.rs
src/tree/: impls.rs  mod.rs
