[package]
name = "ream"
version = "0.1.0"
edition = "2021"
description = "LISPy interpreter"

[profile.release]
opt-level = 3
lto = "thin"
strip = true
codegen-units = 1

[dependencies]
clap = { version="4.3.11", features=["derive"] }
miette = { version="5.9.0", features=["fancy"] }
thiserror = "1.0.43"
unicode-xid = "0.2.4"
