[package]
name = "ream"
version = "0.1.0"
edition = "2021"
description = "LISPy interpreter"

[profile.release]
opt-level = 3
lto = "thin"
strip = true
codegen-units = 1

[dependencies]
clap = { version="4.4.6", features=["derive"] }
miette = { version="5.10.0", features=["fancy"] }
thiserror = "1.0.49"
unicode-xid = "0.2.4"
