[package]
name = "ream"
version = "0.1.0"
edition = "2021"
description = "LISPy interpreter"

[profile.release]
opt-level = 3
lto = "thin"
strip = true
codegen-units = 1

[dependencies]
clap = { version="4.5.3", features=["derive"] }
miette = { version="7.2.0", features=["fancy"] }
thiserror = "1.0.58"
unicode-xid = "0.2.4"
